--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,22 @@ header {
     box-shadow: var(--glass-shadow);
     border-radius: 200px;
 }
+header h1 {
+    font-size: 3rem; /* Hier die gewünschte Schriftgröße anpassen */
+    font-weight: bold;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+header h2 {
+    font-size: 2.5rem; /* Hier die gewünschte Schriftgröße anpassen */
+    font-weight: bold;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+header h3 {
+    font-size: 2rem; /* Hier die gewünschte Schriftgröße anpassen */
+    font-weight: bold;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 
 /* Karten-Container */
 .card-container {
